--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Rock Paper Scissors Mini App</title>
   <meta name="fc:miniapp" content='{
     "version": "1",
-    "imageUrl": "https://source.unsplash.com/random/400x400/?game",
+    "imageUrl": "https://farcaster-game.netlify.app/image.png",
     "button": {
       "title": "Play Now",
       "action": {
         "type": "launch_frame",
         "name": "RockPaperScissors",
         "url": "https://farcaster-game.vercel.app/",
-        "splashImageUrl": "https://farcaster-game.vercel.app/splash.png",
+        "splashImageUrl": "https://farcaster-game.netlify.app/splash.png",
         "splashBackgroundColor": "#00BFFF"
       }
     }
