--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       "action": {
         "type": "launch_frame",
         "name": "RockPaperScissors",
-        "url": "https://farcaster-game.vercel.app/",
+        "url": "https://farcaster-game.netlify.app/",
         "splashImageUrl": "https://farcaster-game.netlify.app/splash.png",
         "splashBackgroundColor": "#00BFFF"
       }
