--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=390, initial-scale=1.0" />
   <title>Rock Paper Scissors Mini App</title>
+
+  <!-- Farcaster Miniapp Metadata -->
   <meta name="fc:miniapp" content='{
     "version": "1",
     "imageUrl": "https://farcaster-game.netlify.app/image.png",
@@ -18,6 +20,7 @@
       }
     }
   }' />
+
   <style>
     body {
       margin: 0;
@@ -77,9 +80,9 @@
     let gameState = { choice: null, computerChoice: null, result: null };
     let isSdkReady = false;
 
-    // 👇 Apna contract address daalein
-    const CONTRACT_ADDRESS = "0x99407dc640bdb6853d1c706a7122d85cbffce935";  
-    const BASE_CHAIN_ID = 8453; // Base mainnet
+    const CONTRACT_ADDRESS = "0x99407dc640bdb6853d1c706a7122d85cbffce935"; 
+    const CLAIM_REWARD_SELECTOR = "0x379607f5"; // claimReward() function selector
+    const BASE_CHAIN = "eip155:8453"; // Base chain in CAIP-2 format
 
     document.addEventListener("DOMContentLoaded", async () => {
       try {
@@ -87,9 +90,12 @@
         console.log("SDK Ready - Mini App Loaded");
         isSdkReady = true;
 
+        // Add game buttons
         document.getElementById("rock-btn").addEventListener("click", () => makeChoice("rock"));
         document.getElementById("paper-btn").addEventListener("click", () => makeChoice("paper"));
         document.getElementById("scissors-btn").addEventListener("click", () => makeChoice("scissors"));
+
+        // Add reward claim button
         document.getElementById("reward-btn").addEventListener("click", claimReward);
       } catch (error) {
         console.error("SDK Error:", error);
@@ -124,25 +130,20 @@
 
     async function claimReward() {
       try {
-        if (!isSdkReady) throw new Error("SDK not ready yet.");
+        if (!isSdkReady) throw new Error("SDK not ready yet");
 
-        // claimReward() selector = 0x379607f5
-        const txHash = await sdk.actions.requestEthereum({
-          method: "eth_sendTransaction",
-          params: [
-            {
-              to: CONTRACT_ADDRESS,
-              data: "0x379607f5",
-              chainId: BASE_CHAIN_ID
-            }
-          ]
+        // Send transaction via Farcaster embedded wallet
+        const txHash = await sdk.wallet.sendTransaction({
+          chainId: BASE_CHAIN,
+          to: CONTRACT_ADDRESS,
+          data: CLAIM_REWARD_SELECTOR
         });
 
         document.getElementById("reward-btn").classList.remove("show");
         document.getElementById("result").innerText += ` 🎉 Claimed reward! TX: ${txHash}`;
       } catch (error) {
         console.error("TX Error:", error);
-        document.getElementById("result").innerText += " Reward claim failed. " + (error.message || "");
+        document.getElementById("result").innerText += " ❌ Reward claim failed. " + (error.message || "");
       }
     }
   </script>
